@@ -1,5 +1,10 @@
 2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Remove trailing whitespaces.
+	* doxygen/doxygen.css: Here.
+
+2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add Doxygen generation rules.
 	* doxygen.m4: Fix copyright.
 	* doxygen.mk: New.
